salesforce/force-app/main/default/objects/OrgIQ_Scan__c/OrgIQ_Scan__c.object-meta.xml
<CustomObject>
    <description>One execution of an OrgIQ readiness scan against a target org or source repository.</description>
    <label>OrgIQ Scan</label>
    <pluralLabel>OrgIQ Scans</pluralLabel>
    <nameField>
        <displayFormat>SCAN-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>