salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Components_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Components_Scanned__c</fullName>
    <description>Total metadata components parsed.</description>
    <inlineHelpText>Total metadata components parsed.</inlineHelpText>
    <label>Components Scanned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>