salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score__c</fullName>
    <description>Weighted readiness score across assessed dimensions, 0-100.</description>
    <inlineHelpText>Weighted readiness score across assessed dimensions, 0-100.</inlineHelpText>
    <label>Composite Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>