salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Id__c</fullName>
    <description>External id of the enterprise this scan belongs to, copied onto the scan. Salesforce permits three levels of custom master-detail and Enterprise to Org to Scan to Finding is four, so the inheritance chain has to break; it breaks here, and this key is what every read path scopes on instead. tests/test_isolation.py fails if any query in this repository reads scan data without it.</description>
    <label>Enterprise Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>