salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Est_Grounding_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Est_Grounding_Tokens__c</fullName>
    <description>Estimated tokens an agent retrieves for these fields today. Deterministic character-based estimate, not a model tokenizer count.</description>
    <inlineHelpText>Estimated tokens an agent retrieves for these fields today. Deterministic character-based estimate, not a model tokenizer count.</inlineHelpText>
    <label>Est Grounding Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>