salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/External_Scan_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Scan_Id__c</fullName>
    <description>Deterministic scan identifier from the CLI. Enables idempotent re-import.</description>
    <inlineHelpText>Deterministic scan identifier from the CLI. Enables idempotent re-import.</inlineHelpText>
    <label>External Scan Id</label>
    <externalId>true</externalId>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>