salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Gate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Gate_Applied__c</fullName>
    <description>True when a gate rule capped the composite score.</description>
    <inlineHelpText>True when a gate rule capped the composite score.</inlineHelpText>
    <label>Gate Applied</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>