salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Gate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Gate_Reason__c</fullName>
    <description>Which gate rule was applied and why.</description>
    <inlineHelpText>Which gate rule was applied and why.</inlineHelpText>
    <label>Gate Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>