salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Readiness_Band__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Band__c</fullName>
    <description>Banded interpretation of the composite score.</description>
    <inlineHelpText>Banded interpretation of the composite score.</inlineHelpText>
    <label>Readiness Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Foundational Work Required</fullName>
            </value>
            <value>
                <fullName>Conditionally Ready</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>