salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Removable_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Removable_Duplicates__c</fullName>
    <description>Estimated grounding tokens removable by collapsing semantic-duplicate field clusters to one canonical field.</description>
    <inlineHelpText>Estimated grounding tokens removable by collapsing semantic-duplicate field clusters to one canonical field.</inlineHelpText>
    <label>Removable - Duplicate Clusters</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>