salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Removable_Restating__c.field-meta.xml
<CustomField>
    <fullName>Removable_Restating__c</fullName>
    <description>Estimated grounding tokens removable by deleting label-restating descriptions. Deterministic estimate over normalised text, not a model tokenizer count.</description>
    <inlineHelpText>Estimated grounding tokens removable by deleting label-restating descriptions. Deterministic estimate over normalised text, not a model tokenizer count.</inlineHelpText>
    <label>Removable - Restating Descriptions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>