salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Removable_Unreferenced__c.field-meta.xml
<CustomField>
    <fullName>Removable_Unreferenced__c</fullName>
    <description>Estimated grounding tokens removable by retiring fields no report, dashboard, flow or Apex references. Usually the largest single lever.</description>
    <inlineHelpText>Estimated grounding tokens removable by retiring fields no report, dashboard, flow or Apex references. Usually the largest single lever.</inlineHelpText>
    <label>Removable - Unreferenced Fields</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>