salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Rubric_Version__c.field-meta.xml
<CustomField>
    <fullName>Rubric_Version__c</fullName>
    <description>Semver of the scoring rubric used. Scores are only comparable within a major version.</description>
    <inlineHelpText>Semver of the scoring rubric used. Scores are only comparable within a major version.</inlineHelpText>
    <label>Rubric Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>