salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Scan_Mode__c.field-meta.xml
<CustomField>
    <fullName>Scan_Mode__c</fullName>
    <description>Whether the scan read source files, a live org, or both.</description>
    <inlineHelpText>Whether the scan read source files, a live org, or both.</inlineHelpText>
    <label>Scan Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>