salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Scan_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Scan_Timestamp__c</fullName>
    <description>When this scan was executed.</description>
    <inlineHelpText>When this scan was executed.</inlineHelpText>
    <label>Scan Timestamp</label>
    <type>DateTime</type>
</CustomField>