salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Semantic_Density__c.field-meta.xml
<CustomField>
    <fullName>Semantic_Density__c</fullName>
    <description>Share of description text that adds information beyond the label and API name. Deterministic estimate from the scanner, not a model measurement.</description>
    <inlineHelpText>Share of description text that adds information beyond the label and API name. Deterministic estimate from the scanner, not a model measurement.</inlineHelpText>
    <label>Semantic Density</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>