salesforce/force-app/main/default/objects/OrgIQ_Scan__c/fields/Target_Org__c.field-meta.xml
<CustomField>
    <fullName>Target_Org__c</fullName>
    <description>Identifier of the org or repository that was scanned.</description>
    <inlineHelpText>Identifier of the org or repository that was scanned.</inlineHelpText>
    <label>Target Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>